--- a/algorithms/correlated_binary/cleaning.ipynb
+++ b/algorithms/correlated_binary/cleaning.ipynb
@@ -1267,7 +1267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('torch-gpu')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1281,12 +1281,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5d80c08235b90c252607ea11351fba5ce04852fce76e38291d6235bd46215ae6"
+    "hash": "97cc609b13305c559618ec78a438abc56230b9381f827f22d070313b9a1f3777"
    }
   }
  },
