added missing cell for image_directory location

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -685,6 +685,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FIXME - update the directories to point where you would like\n",
+    "image_directory = \"/mnt/sda1/image-results-iris-correlated\"\n",
+    "new_dir = image_directory + '/data/'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
