add instructions to setup conda env

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -20,9 +20,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GPU setup\n",
-    "### The following command worked for Nate and I to setup GPU support for Keras:\n",
-    "`conda create --name keras_gpu keras-gpu tensorflow-gpu`"
+    "## Env setup\n",
+    "You can either create your own environment and install the packages manually, or use the following commands to create a conda environment with the required packages.\n",
+    "### BIE Environment:\n",
+    "`conda create --name BIE_conversion`\n",
+    "</br>\n",
+    "`conda activate BIE_conversion`\n",
+    "</br>\n",
+    "`conda env update --name BIE_conversion --file ./conda_envs/BIE_conversion.yml`\n",
+    "### Keras Environment:\n",
+    "`conda create --name keras_gpu`\n",
+    "</br>\n",
+    "`conda activate keras_gpu`\n",
+    "</br>\n",
+    "`conda env update --name keras_gpu --file ./conda_envs/keras_gpu.yml`"
    ]
   },
   {
