update template instructions

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "## Env setup\n",
     "You can either create your own environment and install the packages manually, or use the following commands to create a conda environment with the required packages.\n",
+    "If you are using Windows and running into errors, try omitting the word 'env' from the following commands. Mileage may vary with other OS's, so it may take a bit of debugging.\n",
     "### BIE Environment:\n",
     "`conda create --name BIE_conversion`\n",
     "</br>\n",
