adding more documentation for env setup

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -20,21 +20,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Env setup\n",
-    "You can either create your own environment and install the packages manually, or use the following commands to create a conda environment with the required packages.\n",
+    "# Env setup\n",
+    "You can either create your own environment and install the packages manually, or use the following commands to create a conda environment with the required packages. Before running the commands, edit the two .yml file prefixes to match the path to your miniconda path. Setting up an environment is always tricky. You will most likely run into errors. Don't feel bad looking up the errors on Google and asking for assistance after trying to resolve the issue.\n",
+    "</br>\n",
+    "</br>\n",
     "If you are using Windows and running into errors, try omitting the word 'env' from the following commands. Mileage may vary with other OS's, so it may take a bit of debugging.\n",
-    "### BIE Environment:\n",
-    "`conda create --name BIE_conversion`\n",
     "</br>\n",
-    "`conda activate BIE_conversion`\n",
     "</br>\n",
-    "`conda env update --name BIE_conversion --file ./conda_envs/BIE_conversion.yml`\n",
-    "### Keras Environment:\n",
-    "`conda create --name keras_gpu`\n",
-    "</br>\n",
-    "`conda activate keras_gpu`\n",
-    "</br>\n",
-    "`conda env update --name keras_gpu --file ./conda_envs/keras_gpu.yml`"
+    "Below, I provide two methods of setting up your environment: `Env Environment Based on My Yaml Files` and `Alternative Method - Custom Built Environment`. Try to use the first method, but if you run into issues, try the second method. **** You do not need to run both methods!!! **** Just get one of them working.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Env Environment Based on My Yaml Files:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BIE Environment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! conda create --name BIE_conversion\n",
+    "! conda activate BIE_conversion\n",
+    "! conda env update --name BIE_conversion --file ./conda_envs/BIE_conversion.yml"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras GPU Environment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! conda create --name keras_gpu\n",
+    "! conda activate keras_gpu\n",
+    "! conda env update --name keras_gpu --file ./conda_envs/keras_gpu.yml"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alternative Method - Custom Built Environment:\n",
+    "If the previous methods didn't work, try this method. It will create a gpu environment with the necessary libraries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Installations for alternative method\n",
+    "! conda create --name keras_gpu keras-gpu tensorflow-gpu\n",
+    "! conda activate keras_gpu\n",
+    "! conda install -c anaconda pandas=1.4.1\n",
+    "! conda install -c anaconda matplotlib=3.5.1\n",
+    "! conda install -c anaconda numpy=1.18.5\n",
+    "! conda install -c anaconda bitstring=3.1.9\n",
+    "! conda install -c anaconda joblib=1.1.0\n",
+    "! conda install -c anaconda pillow=8.2.0"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Env Setup Conclusion\n",
+    "There is a high likelihood that you will run into errors. If you do, don't feel bad. It's a learning experience. If you are still having issues, feel free to reach out to me for assistance. Try modifying the files as necessary and looking up the errors on Google. This process will likely take some time and be the hardest part of using this notebook."
    ]
   },
   {
@@ -1286,7 +1360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "BIE_conversion",
    "language": "python",
    "name": "python3"
   },
@@ -1305,7 +1379,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c11ee216d7ec577d195a10435e0960b194de760ba863ebf1d28b00dc7c22c397"
+    "hash": "34a7b607bdc37cf1039a66573031c530725f74c2d50a46d4d252fca51e0cb36f"
    }
   }
  },
