fix missing directory bug

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -637,7 +637,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train ResNet50"
+    "## Train ResNet50\n",
+    "If you used my yaml files where there are two conda environments, this is the stage where you will change to the `keras_gpu` environment. If you used the alternative method, you should be in the correct environment already."
    ]
   },
   {
@@ -700,6 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "new_dir = image_directory + '/data/'\n",
     "average_history, best_model = train_resnet_model_k_fold(num_classes, img_size, f\"{new_dir}/Train/\", number_of_epochs, f\"{image_directory}/results/\", num_folds, batch_size)"
    ]
   },
