add time metrics for BIE conversion

--- a/experiments/experiment_template.ipynb
+++ b/experiments/experiment_template.ipynb
@@ -592,7 +592,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to convert 150 samples to binary: 2.2125086784362793 seconds. Seconds per sample = 0.014750057856241863\n"
+     ]
+    }
+   ],
    "source": [
     "convert_samples_to_binary(x, df[\"Id\"], image_directory, precision, one, zero, n_jobs, feature_types)"
    ]
@@ -653,7 +661,7 @@
     "Then, open a browser and navigate to `localhost:6006`.\n",
     "<br />\n",
     "<br />\n",
-    "![TensorBoard](./tensorboard.png)"
+    "![TensorBoard](./imgs/tensorboard.png)"
    ]
   },
   {
@@ -665,7 +673,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-07 13:15:33.608251: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
+      "2023-03-09 12:19:57.809573: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
      ]
     }
    ],
@@ -701,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_dir = image_directory + '/data/'\n",
+    "new_dir = image_directory + '/data'\n",
     "average_history, best_model = train_resnet_model_k_fold(num_classes, img_size, f\"{new_dir}/Train/\", number_of_epochs, f\"{image_directory}/results/\", num_folds, batch_size)"
    ]
   },
@@ -886,6 +894,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "new_dir = image_directory + '/data'\n",
     "average_history, best_model = train_resnet_model_k_fold(num_classes, img_size, f\"{new_dir}/Train/\", number_of_epochs, f\"{image_directory}/results/\", num_folds, batch_size)"
    ]
   },
@@ -1362,7 +1371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BIE_conversion",
+   "display_name": "keras_gpu",
    "language": "python",
    "name": "python3"
   },
@@ -1376,12 +1385,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "34a7b607bdc37cf1039a66573031c530725f74c2d50a46d4d252fca51e0cb36f"
+    "hash": "01b43af51fd77f9f473dc8138d7466027ddf88d382b9cdd9bb3068aee8377522"
    }
   }
  },
